--- a/aurora-skyes-back/src/main/resources/application.properties
+++ b/aurora-skyes-back/src/main/resources/application.properties
@@ -1,15 +1,16 @@
+# Nom de l'application
 spring.application.name=aurora-skyes-back
 
-spring.datasource.url=jdbc:h2:mem:testdb
+# Configuration de la datasource PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/aurora-skyes
 spring.datasource.username=admin
-spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.password=admin123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate JPA
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.driver-class-name=org.h2.Driver
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-
+# Configuration du port et du contexte
 server.port=8080
 server.servlet.context-path=/
