--- a/aurora-skyes-back/src/main/resources/application.properties
+++ b/aurora-skyes-back/src/main/resources/application.properties
@@ -9,8 +9,17 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate JPA
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 
 # Configuration du port et du contexte
 server.port=8080
 server.servlet.context-path=/
+
+# Logs
+logging.level.org.springframework.security.config.annotation.authentication.configuration.InitializeUserDetailsBeanManagerConfigurer=ERROR
+spring.jpa.properties.hibernate.transaction.jta.platform=org.hibernate.engine.transaction.jta.platform.internal.NoJtaPlatform
+logging.level.org.hibernate=ERROR
+logging.level.org.apache.catalina=ERROR
+logging.level.org.springframework.web=ERROR
+logging.level.org.springframework.data=ERROR
+logging.level.org.springframework.security=ERROR
