--- a/aurora-skyes-back/src/main/resources/application.properties
+++ b/aurora-skyes-back/src/main/resources/application.properties
@@ -23,3 +23,8 @@ logging.level.org.apache.catalina=ERROR
 logging.level.org.springframework.web=ERROR
 logging.level.org.springframework.data=ERROR
 logging.level.org.springframework.security=ERROR
+
+# Prometheus
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.prometheus.access=UNRESTRICTED
+management.prometheus.metrics.export.enabled=true
