--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,49 @@
 networks:
- aurora-skyes:
-  driver: bridge
+  aurora-skyes:
+    driver: bridge
 
 services:
- postgres:
-  image: postgres:17.2
-  container_name: postgres_container
-  environment:
-  POSTGRES_USER: admin
-  POSTGRES_PASSWORD: admin123
-  POSTGRES_DB: aurora-skyes
-  ports:
-   - "5432:5432"
-  volumes:
-   - postgres_data:/var/lib/postgresql/data
-  networks:
-   - aurora-skyes
+  postgres:
+    image: postgres:17.2
+    container_name: postgres_container
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin123
+      POSTGRES_DB: aurora-skyes
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - aurora-skyes
 
- pgadmin:
-  image: dpage/pgadmin4:8.12
-  container_name: pgadmin_container
-  environment:
-   PGADMIN_DEFAULT_EMAIL: admin@admin.com
-   PGADMIN_DEFAULT_PASSWORD: admin
-  ports:
-   - "8000:80"
-  networks:
-   - aurora-skyes
-  depends_on:
-   - postgres
+  pgadmin:
+    image: dpage/pgadmin4:8.12
+    container_name: pgadmin_container
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "8000:80"
+    networks:
+      - aurora-skyes
+    depends_on:
+      - postgres
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana:11.4.0
+    container_name: grafana
+    ports:
+      - "3000:3000"
 
 volumes:
- postgres_data:
-  driver: local
+  postgres_data:
+    driver: local
