--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,17 +32,21 @@ services:
 
   prometheus:
     image: prom/prometheus
-    container_name: prometheus
+    container_name: prometheus_container
     volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - "9090:9090"
+    networks:
+      - aurora-skyes
 
   grafana:
     image: grafana/grafana:11.4.0
-    container_name: grafana
+    container_name: grafana_container
     ports:
       - "3000:3000"
+    networks:
+      - aurora-skyes
 
 volumes:
   postgres_data:
