--- a/grafana/dashboard-application.json
+++ b/grafana/dashboard-application.json
@@ -24,7 +24,7 @@
 	  {
 		"datasource": {
 		  "type": "prometheus",
-		  "uid": "ee674p72cr0n4b"
+		  "uid": "de68ho915bpq8b"
 		},
 		"fieldConfig": {
 		  "defaults": {
@@ -129,7 +129,7 @@
 		  {
 			"datasource": {
 			  "type": "prometheus",
-			  "uid": "ee674p72cr0n4b"
+			  "uid": "de68ho915bpq8b"
 			},
 			"disableTextWrap": false,
 			"editorMode": "builder",
@@ -162,4 +162,4 @@
 	"uid": "ce67amk69vlkwc",
 	"version": 7,
 	"weekStart": ""
-  }
+}
