--- a/aurora-skyes-back/pom.xml
+++ b/aurora-skyes-back/pom.xml
@@ -122,6 +122,12 @@
 			<artifactId>micrometer-registry-prometheus</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
 
 	</dependencies>
 
