--- a/aurora-skyes-back/src/main/resources/application.properties
+++ b/aurora-skyes-back/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/aurora-skyes
 spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate JPA
 spring.jpa.hibernate.ddl-auto=update
