--- a/aurora-skyes-front/package.json
+++ b/aurora-skyes-front/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^19.0.0",
     "@ngx-translate/core": "^16.0.3",
     "@ngx-translate/http-loader": "^16.0.0",
+    "aurora-skyes-front": "file:",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
