--- a/aurora-skyes-back/src/main/resources/application.properties
+++ b/aurora-skyes-back/src/main/resources/application.properties
@@ -29,3 +29,11 @@ logging.level.org.springframework.security=ERROR
 management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.prometheus.access=UNRESTRICTED
 management.prometheus.metrics.export.enabled=true
+
+#Liquibase
+#spring.liquibase.drop-first=true
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:liquibase/changelog/master.xml
+spring.liquibase.contexts= schema, data
+spring.liquibase.show-summary=OFF
+logging.level.liquibase.changelog=OFF
