--- a/aurora-skyes-front/package.json
+++ b/aurora-skyes-front/package.json
@@ -23,6 +23,8 @@
     "@ngx-translate/core": "^16.0.3",
     "@ngx-translate/http-loader": "^16.0.0",
     "aurora-skyes-front": "file:",
+    "chart.js": "^4.4.7",
+    "ng2-charts": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
