--- a/aurora-skyes-db-access/pom.xml
+++ b/aurora-skyes-db-access/pom.xml
@@ -10,10 +10,10 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>com.esiea</groupId>
-	<artifactId>aurora-skyes-back</artifactId>
+	<artifactId>aurora-skyes-db-access</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>aurora-skyes-back</name>
-	<description>aurora-skyes-back</description>
+	<description>aurora-skyes-db-access</description>
 	<url />
 	<licenses>
 		<license />
@@ -107,13 +107,31 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.4</version>
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		
+		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>4.30.0</version>
 		</dependency>
 
 		<dependency>
