[fix] API token

--- a/aurora-skyes-db-access/src/main/resources/application.properties
+++ b/aurora-skyes-db-access/src/main/resources/application.properties
@@ -37,3 +37,6 @@ spring.liquibase.change-log=classpath:liquibase/changelog/master.xml
 spring.liquibase.contexts= schema, data
 spring.liquibase.show-summary=OFF
 logging.level.liquibase.changelog=OFF
+
+api.key=aled_aled_aled_aled_aled
+
