--- a/aurora-skyes-db-access/pom.xml
+++ b/aurora-skyes-db-access/pom.xml
@@ -140,6 +140,13 @@
 			<version>1.6.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct-processor</artifactId>
+			<version>1.6.3</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
