[feat] api extern

--- a/aurora-skyes-db-access/src/main/resources/application.properties
+++ b/aurora-skyes-db-access/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Nom de l'application
-spring.application.name=aurora-skyes-back
+spring.application.name=aurora-skyes-db-access
 
 # Configuration de la datasource PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:9999/aurora-skyes
