--- a/aurora-skyes-api/pom.xml
+++ b/aurora-skyes-api/pom.xml
@@ -12,10 +12,10 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<artifactId>aurora-skyes-back</artifactId>
+	<artifactId>aurora-skyes-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>aurora-skyes-back</name>
-	<description>Backend du projet Aurora Skyes</description>
+	<name>aurora-skyes-api</name>
+	<description>Module api externe Aurora Skyes</description>
 
 	<!-- Propriétés -->
 	<properties>
@@ -101,6 +101,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
 			<version>1.6.3</version>
@@ -137,26 +143,30 @@
 		</dependency>
 
 
+		<dependency>
+            <groupId>com.esiea</groupId>
+            <artifactId>aurora-skyes-back</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
+		<sourceDirectory>src/main/java</sourceDirectory>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>repackage</goal>
-						</goals>
-					</execution>
-				</executions>
 				<configuration>
 					<skip>true</skip>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
