--- a/aurora-skyes-api/src/main/resources/application.properties
+++ b/aurora-skyes-api/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Nom de l'application
-spring.application.name=aurora-skyes-back
+spring.application.name=aurora-skyes-api
 
 # Configuration du port et du contexte
-server.port=8080
+server.port=8082
 server.servlet.context-path=/
 
 # Logs
@@ -16,3 +16,4 @@ logging.level.org.springframework.security=ERROR
 
 # Api key DB Acess
 api.key=aled_aled_aled_aled_aled
+
