--- a/aurora-skyes-db-access/src/main/resources/application.properties
+++ b/aurora-skyes-db-access/src/main/resources/application.properties
@@ -31,7 +31,7 @@ management.endpoint.prometheus.access=UNRESTRICTED
 management.prometheus.metrics.export.enabled=true
 
 #Liquibase
-#spring.liquibase.drop-first=true
+spring.liquibase.drop-first=true
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:liquibase/changelog/master.xml
 spring.liquibase.contexts= schema, data
